<resources>
    <string name="app_name">MOOC</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="username">Username</string>
    <string name="emailaddress">Email Address</string>
    <string name="password">Password</string>
    <string name="passwordconfirm">Confirm Password</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="IAmA">I am a</string>
    <string name="parent">Parent</string>
    <string name="student">Student</string>
    <string name="btnNext">Next</string>
    <string name="welcomeTitle">Welcome to MOOC</string>
    <string name="slogan">   For a successful academic life</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Log out</string>
    <string name="logoutMessage">You were logged out</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_home__parent">Home</string>
    <string name="nav_header_title">pseudonyme</string>
    <string name="nav_header_subtitle">pseudonyme@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_parent">HomeParent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email_parent">pseudonyme@mooc.com</string>
    <string name="phone_parent">+33 6 12 34 56 78</string>
    <string name="address_parent"> N° street, city, postal code, town, Country</string>
    <string name="psw_parent"> ***********</string>
    <string name="psw_student"> ***********</string>
    <string name="QCMs">QCMs</string>
    <string name="submit">Submit</string>
    <string name="quizCorrect">Congratulations! All your answers are correct</string>
    <string name = "quizIncorrect">You got %1$d correct answer%2$s out of %3$d. You have made some mistakes but don\'t worry, this is a place to learn.</string>
    <string name = "finishQuiz">Finish Quiz</string>
    <string name = "activityQcmTextmessage">You took the "%1$s" QCM and scored %2$s on it.</string>
    <string name = "activitylog">Your activity log</string>

        <string name="signupSuccessMessage">Signup was successful</string>
        <string name="signupFailMessage">Signup was unsuccessful</string>
        <string name="afterSignupLoginMessage">Signin with your newly created account</string>
        <string name="addStudents">Add Students</string>
        <string name="fichesDeCours">Fiche de Cours</string>
        <string name="presentations">Presentations Videos</string>
        <string name="fichesDeRevision">Fichs de Revision</string>
        <string name="QCM">QCM</string>
        <string name="questions_reponse">Questions-Reponses</string>
        <string name="btnToQCM">Pass the Quiz</string>
        <string name="activityVideoTextMessage">You watched the video</string>
        <string name="activityFicheTextMessage">You read the document</string>
        <!-- for the theme -->
        <!-- Home -->
        <string name="home_tab_xml">XML</string>
        <string name="home_tab_code">Code</string>

        <!-- Set Theme Dialog -->
        <string name="set_theme_dialog_title">Set Theme</string>
        <string name="set_theme_dialog_button_positive">Set Theme</string>
        <string name="set_theme_dialog_button_negative">Cancel</string>

        <!-- Material Theme Elements -->
        <string name="material_theme_red">Red</string>
        <string name="material_theme_orange">Orange</string>
        <string name="material_theme_lime">Lime</string>
        <string name="material_theme_green">Green</string>
        <string name="material_theme_teal">Teal</string>
        <string name="material_theme_blue">Blue</string>
        <string name="material_theme_purple">Purple</string>
        <string name="material_theme_current_theme">Current Theme</string>
        <string name="material_theme_green_theme">Green Theme</string>
        <string name="material_theme_blue_theme">Blue Theme</string>
        <string name="material_theme_buttons_raised">Buttons: Raised (Default)</string>
        <string name="material_theme_buttons_no_raise">Buttons: No Raise</string>
        <string name="material_theme_buttons_flat">Buttons: Flat</string>
        <string name="material_theme_default">Default</string>
        <string name="material_theme_colored">Colored</string>
        <string name="material_theme_colored_text">Colored Text</string>
        <string name="material_theme_selectable_items_rect">Selectable Items: Rectangle</string>
        <string name="material_theme_selectable_items_rounded_rect">Selectable Items: Rounded Rectangle</string>
        <string name="material_theme_text_fields">Text Fields</string>
        <string name="material_theme_radio_buttons">Radio Buttons</string>
        <string name="material_theme_checkboxes">Checkboxes</string>
        <string name="material_theme_switches">Switches</string>
        <string name="material_theme_spinners">Dropdown Spinners</string>
        <string name="material_theme_sliders">Sliders</string>
        <string name="material_theme_progress_indicators">Progress Indicators</string>
        <string name="material_theme_icons">Icons</string>
        <string name="material_theme_snackbars">Snackbars</string>
        <string name="material_theme_dialogs">Dialogs</string>
        <string name="material_theme_dialog_button_positive">Positive</string>
        <string name="material_theme_dialog_button_negative">Negative</string>

    <!-- Spinners -->
    <string name="spinner_item_1">One</string>
    <string name="spinner_item_2">Two</string>
    <string name="spinner_item_3">Three</string>
    <string name="spinner_item_4">Four</string>
    <string name="spinner_item_5">Five</string>

    <string-array name="spinner_items_array">
        <item>@string/spinner_item_1</item>
        <item>@string/spinner_item_2</item>
        <item>@string/spinner_item_3</item>
        <item>@string/spinner_item_4</item>
        <item>@string/spinner_item_5</item>
    </string-array>

    <!-- Snackbars -->
    <string name="snackbar_action">Action</string>
    <string name="title_activity_matieres_of_user">MatieresOfUserActivity</string>
    <string name="title_activity_matiere">MatiereActivity</string>
</resources>
