<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joseph.mooc.Activities.RegisterParentActivity">

    <TextView
        android:id="@+id/testtx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/parentSignupFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="69dp"
                tools:layout_editor_absoluteY="70dp" />

            <EditText
                android:id="@+id/parentSignupLasttName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="69dp"
                tools:layout_editor_absoluteY="116dp" />

            <EditText
                android:id="@+id/parentSignupDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dateofbirth"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/parentSignupEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/emailaddress"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/parentSignupPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/parentSignupCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/parentSignupCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/childrenNumberSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/parentSignupSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addStudents"
                android:onClick="signup"
                />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
