<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/testMatiereFromRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"

            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnFicheDeCours"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/material_lime_100"
                android:layout_weight="1.0"
                android:text="@string/fichesDeCours" />

            <Button
                android:id="@+id/btnFicheDeRevision"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/material_green_100"
                android:layout_weight="1.0"
                android:text="@string/fichesDeRevision" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnPresentation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/material_red_050"
                android:layout_weight="1.0"
                android:text="@string/presentations" />

            <Button
                android:id="@+id/btnQCM"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/material_blue_100"
                android:layout_weight="1.0"
                android:text="@string/QCM" />

        </LinearLayout>
    </LinearLayout>