<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joseph.mooc.Activities.RegisterActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="63dp"
        android:layout_marginTop="107dp"
        android:text="@string/IAmA"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/RGUserType"
        app:layout_constraintStart_toStartOf="@+id/RGUserType"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/RGUserType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:layout_marginStart="18dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnSignupUsertypeNext"
        app:layout_constraintStart_toStartOf="@+id/btnSignupUsertypeNext"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/btnParent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/parent"
            android:textSize="30sp"

            />

        <RadioButton
            android:id="@+id/btnStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textSize="30sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSignupUsertypeNext"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:text="@string/btnNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RGUserType" />
</android.support.constraint.ConstraintLayout>
