<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E6FF">

    <RelativeLayout
        android:id="@+id/rellay_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@color/profile">

        <RelativeLayout
            android:id="@+id/img_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/circle_border"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="9dp"
                android:background="@drawable/circle" />

        </RelativeLayout>

        <TextView
            android:id="@+id/profile_name_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_student"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:fontFamily="sans-serif-light"
            android:text="Name"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/profile_address_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_name_student"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="City, Country "
            android:textAllCaps="true"
            android:textColor="@color/address"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linlay_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rellay_student"
        android:orientation="horizontal"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linlay_student">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/email_parent"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/phone_parent"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Adress"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/address_parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/address_parent"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password "
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/psw_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/psw_student"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>